apps/echo/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: echo
  labels:
    istio.io/dataplane-mode: ambient
